# cnre

./: .gitignore  .gitmodules  .pre-commit-config.yaml  00 is it real.ipynb  01 basic algorithm.ipynb  README.md  environment.yml  importance sampling diagnostic.ipynb  loss-summary-diagram.ipynb  pyproject.toml  setup.cfg
basicpython/: __init__.py
benchmarking/: 00 enumerate experiments.ipynb  01 initial metrics.ipynb  compiledf.py  metrics.py  notebookutils.py  plot-validation-loss.py  plot.py  run.py  training-samples.py
benchmarking/config/: config.yaml
benchmarking/config/algorithm/: cnre.yaml  nle.yaml  npe.yaml  nre.yaml  posterior.yaml  prior.yaml  rej-abc.yaml  rf-abc.yaml  sl.yaml  smc-abc.yaml  snle.yaml  (+2 more)
cnre/: __init__.py  data.py  experiments.py  joint.py  loss.py  metrics.py  posterior.py  simulators.py  train.py
cnre/algorithms/: base.py  cnre.py  inforatio.py  nre.py  utils.py
cnre/data/: benchmark.py  prior.py
cnre/diagnostics/: metricsdf.py
infinite/: 00 counts.ipynb  01 validation loss.ipynb  02 relplots.ipynb  03 conceptual plot.ipynb  04 sbibm.ipynb  05 mi.ipynb  calls.md  compiledf.py  experiment-reference.csv  fix-bench.csv  fix-joint.csv  fix-prior.csv  fix-sameval.csv  fix-sbibm.csv  main.py  metrics-bench.csv  metrics-joint.csv  metrics-mi-long.csv  metrics-mi.csv  metrics-prior.csv  metrics-sameval.csv  metrics-sbibm-extra-extra.csv  metrics-sbibm-extra.csv  metrics-sbibm.csv  metrics.py  notebook.py  run.py  runfuncs.py
infinite/config/: config.yaml
seq/: 00 basic algorithm.ipynb  01 basic algorithm.py  02 fixed potential.py
(+45 files in other folders)
