[metadata]
name = cnre
# version = We are using setuptools_scm, see https://github.com/pypa/setuptools_scm
description = Basic python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bkmi/cnre

[options]
packages = find:
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy
    scipy
    matplotlib
    scikit-learn
    jupyter
    jupyterlab
    torch
    hydra-core
    hydra-joblib-launcher
    hydra-submitit-launcher
    # sbi @ file://remote/sbi  # -e


[options.extras_require]
dev =
    pre-commit
    black
    isort
    pytest

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501, E266
